--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -24,42 +24,129 @@
         body {
             font-family: 'Open Sans', sans-serif;
             font-weight: 400; 
-            letter-spacing: 0.1rem;
+            letter-spacing: 0.075rem;
+            font-size: 1rem; /* Default font size */
         }
-        h1, h2, h3, h4, h5, h6 {
+        h1 {
             font-family: 'Bebas Neue', cursive;
             font-weight: 700; 
-            letter-spacing: 0.2rem; 
+            letter-spacing: 0.1rem; 
+            font-size: 2.25rem; /* Font size for h1 */
+        }
+        h2 {
+            font-family: 'Bebas Neue', cursive;
+            font-weight: 700; 
+            letter-spacing: 0.1rem; 
+            font-size: 1.75rem; /* Font size for h2 */
+        }
+        h3 {
+            font-family: 'Bebas Neue', cursive;
+            font-weight: 700; 
+            letter-spacing: 0.1rem; 
+            font-size: 1.5rem; /* Font size for h3 */
+        }
+        h4 {
+            font-family: 'Bebas Neue', cursive;
+            font-weight: 700; 
+            letter-spacing: 0.1rem; 
+            font-size: 1.25rem; /* Font size for h4 */
+        }
+        h5 {
+            font-family: 'Bebas Neue', cursive;
+            font-weight: 700; 
+            letter-spacing: 0.1rem; 
+            font-size: 1rem; /* Font size for h5 */
+        }
+        h6 {
+            font-family: 'Bebas Neue', cursive;
+            font-weight: 700; 
+            letter-spacing: 0.1rem; 
+            font-size: 0.875rem; /* Font size for h6 */
+        }
+        p {
+            font-size: 0.875rem; /* Font size for p */
+        }
+        li {
+            font-size: 0.875rem; /* Font size for li */
+        }
+        /* Estilos para el contenedor de la alerta */
+        #alert-container {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1050; /* Asegurarse de que esté por encima de otros elementos */
+            width: auto;
+            max-width: 300px;
+        }
+        .alert-icon {
+            width: 1.25rem;
+            height: 1.25rem;
         }
     </style>
 </head>
 <body>
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container px-4 px-lg-5">
-            <a href="{% url 'home' %}" style="text-decoration: none; color: black;">
-                <h1>¡Bienvenidos!</h1>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'products_all' %}">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">Sobre nosotros</a></li>
-                </ul>
-                <a class="btn btn-outline-dark" href="{% url 'cart_detail' %}">
-                    <i class="bi-cart-fill me-1"></i>
-                    Carrito
-                    <span class="badge bg-dark text-white ms-1 rounded-pill" id="cart-count">{{ cart_count }}</span>
-                </a>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container px-2 px-lg-3">
+            <!-- Primera fila -->
+            <div class="row w-100">
+                <div class="col d-flex align-items-center">
+                    <a href="{% url 'home' %}" style="text-decoration: none; color: black;">
+                        <h1>¡Bienvenidos!</h1>
+                    </a>
+                </div>
+            </div>
+            <!-- Segunda fila -->
+            <div class="row w-100 mt-2">
+                <div class="col d-flex align-items-center">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
+                        <strong>
+                            <li class="nav-item mx-1"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Inicio</a></li>
+
+                        </strong>
+                        <strong>
+                            <li class="nav-item mx-1"><a class="nav-link active" aria-current="page" href="{% url 'products_all' %}">Productos</a></li>
+                        </strong>
+
+                        <strong>
+                            <li class="nav-item mx-1"><a class="nav-link active" href="{% url 'about' %}">Nosotros</a></li>
+                        </strong>
+                        
+                       
+                        
+                    </ul>
+                </div>
+                <div class="col d-flex justify-content-end align-items-center position-relative">
+                    <a class="btn btn-outline-dark position-relative" href="{% url 'cart_detail' %}">
+                        <i class="bi-cart-fill me-1"></i>
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark text-white" id="cart-count">{{ cart_count }}</span>
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
+
+    <!-- Alert container -->
+    <div id="alert-container"></div>
+
+    <!-- SVG Icons -->
+    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+        <symbol id="info-fill" viewBox="0 0 16 16">
+            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+        </symbol>
+        <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+          </symbol>
+    </svg>
+
+
+
 
     <!-- Header-->
     <header class="bg-dark py-5">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Tienda</h1>
+                <h2 class="display-4 fw-bolder">Tienda</h2>
                 <p class="lead fw-normal text-white-50 mb-0">Eslogan</p>
             </div>
         </div>
