--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,13 +1,13 @@
 <!-- filepath: /c:/Users/Wesley/Desktop/Proyectos/Bracelet project/BraceletProject/products/templates/products/product_list.html -->
 {% for product in products %}
-    <div class="col mb-5">
+    <div class="col mb-1 p-2"> 
         <div class="card h-100">
             <!-- Sale badge-->
             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Unidades: {{ product.available_units }}</div>
             <!-- Product image-->
             <img class="card-img-top" src="{{ product.image_url }}" alt="{{ product.name }}" />
             <!-- Product details-->
-            <div class="card-body p-4">
+            <div class="card-body px-1">
                 <div class="text-center">
                     <!-- Product name-->
                     <h5 class="fw-bolder">{{ product.name }}</h5>
@@ -17,7 +17,7 @@
                             <span class="badge bg-secondary mx-1">{{ category.name }}</span>
                         {% endfor %}
                     </div>
-                    <p class="text-center">
+                    <p class="text-center mx-0">
                         {{ product.description }}
                     </p>
                     <!-- Product price-->
@@ -25,11 +25,20 @@
                 </div>
             </div>
             <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <form action="GET" class="form-control">
+            <div class="card-footer p-0 pt-0 border-top-0 bg-transparent">
+                <form action="#" method="post" class="form-control" onsubmit="return false;">
                     <input type="hidden" name="product_id" value="{{ product.id }}">
-                    <input class="my-1" type="number" name="quantity" value="1" min="1" max="{{ product.available_units }}">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto add-to-cart" href="{% url 'cart_add' product.id %}">Añadir al carrito</a></div>
+                    <div class="d-flex flex-column">
+                        <input class="my-1 form-control" 
+                               type="number" 
+                               name="quantity" 
+                               value="1" 
+                               min="1" 
+                               max="{{ product.available_units }}">
+                        <a class="btn btn-outline-dark mt-2 add-to-cart" href="{% url 'cart_add' product.id %}">
+                            Añadir al carrito
+                        </a>
+                    </div>
                 </form>
             </div>
         </div>
