--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -10,7 +10,7 @@
         {% block title %}{% endblock %}
     </title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
+    <!--<link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" /> Favicon-->
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -19,69 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Open Sans', sans-serif;
-            font-weight: 400; 
-            letter-spacing: 0.075rem;
-            font-size: 1rem; /* Default font size */
-        }
-        h1 {
-            font-family: 'Bebas Neue', cursive;
-            font-weight: 700; 
-            letter-spacing: 0.1rem; 
-            font-size: 2.25rem; /* Font size for h1 */
-        }
-        h2 {
-            font-family: 'Bebas Neue', cursive;
-            font-weight: 700; 
-            letter-spacing: 0.1rem; 
-            font-size: 1.75rem; /* Font size for h2 */
-        }
-        h3 {
-            font-family: 'Bebas Neue', cursive;
-            font-weight: 700; 
-            letter-spacing: 0.1rem; 
-            font-size: 1.5rem; /* Font size for h3 */
-        }
-        h4 {
-            font-family: 'Bebas Neue', cursive;
-            font-weight: 700; 
-            letter-spacing: 0.1rem; 
-            font-size: 1.25rem; /* Font size for h4 */
-        }
-        h5 {
-            font-family: 'Bebas Neue', cursive;
-            font-weight: 700; 
-            letter-spacing: 0.1rem; 
-            font-size: 1rem; /* Font size for h5 */
-        }
-        h6 {
-            font-family: 'Bebas Neue', cursive;
-            font-weight: 700; 
-            letter-spacing: 0.1rem; 
-            font-size: 0.875rem; /* Font size for h6 */
-        }
-        p {
-            font-size: 0.875rem; /* Font size for p */
-        }
-        li {
-            font-size: 0.875rem; /* Font size for li */
-        }
-        /* Estilos para el contenedor de la alerta */
-        #alert-container {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            z-index: 1050; /* Asegurarse de que esté por encima de otros elementos */
-            width: auto;
-            max-width: 300px;
-        }
-        .alert-icon {
-            width: 1.25rem;
-            height: 1.25rem;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
 </head>
 <body>
     <!-- Navigation-->
@@ -112,7 +50,7 @@
                 </div>
                 <div class="col d-flex justify-content-end align-items-center position-relative">
                     <a class="btn btn-outline-dark position-relative" href="{% url 'cart_detail' %}">
-                        <i class="bi-cart-fill me-1"></i>
+                        <i class="bi-cart-fill me-1 custom-icon-size"></i>
                         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark text-white" id="cart-count">{{ cart_count }}</span>
                     </a>
                 </div>
@@ -120,8 +58,7 @@
         </div>
     </nav>
 
-    <!-- Alert container -->
-    <div id="alert-container"></div>
+    
 
     <!-- SVG Icons -->
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -154,6 +91,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="{% static 'core/js/script.js' %}"></script>
+    
 </body>
 </html>
