--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -19,6 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8532f70a6f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
 </head>
 <body>
