--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,6 +23,33 @@ Productos
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" id="product-list">
             {% include 'products/product_list.html' %}
         </div>
+
+        <nav aria-label="Page navigation" class="d-flex justify-content-center my-3">
+            <ul class="pagination pagination-md">
+                {% if products.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link text-dark" href="?page={{ products.previous_page_number }}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}">
+                            <span>&#8203;</span><i class="fa-solid fa-caret-left"></i>
+                        </a>
+                    </li>
+                {% endif %}
+                {% for num in products.paginator.page_range %}
+                    <li class="page-item {% if products.number == num %}active{% endif %}">
+                        <a class="page-link text-dark" href="?page={{ num }}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}">
+                            {{ num }}
+                        </a>
+                    </li>
+                {% endfor %}
+                {% if products.has_next %}
+                    <li class="page-item">
+                        <a class="page-link text-dark" href="?page={{ products.next_page_number }}{% if request.GET.category %}&category={{ request.GET.category }}{% endif %}">
+                            <span>&#8203;</span><i class="fa-solid fa-caret-right"></i>
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
+
     </div>
 </section>
 {% endblock %}
